// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils helper functions renders displayVisualization function 1`] = `
<div>
  <Bar
    layoutConfig={
      Object {
        "xaxis": Object {
          "fixedrange": false,
          "showgrid": false,
        },
        "yaxis": Object {
          "fixedrange": false,
          "showgrid": false,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "Carrier": Array [
            "BeatsWest",
            "Logstash Airways",
            "OpenSearch Dashboards Airlines",
            "OpenSearch-Air",
          ],
          "avg(FlightDelayMin)": Array [
            53.65384615384615,
            45.36144578313253,
            63.1578947368421,
            46.81318681318681,
          ],
        },
        "jsonData": Array [
          Object {
            "Carrier": "BeatsWest",
            "avg(FlightDelayMin)": 53.65384615384615,
          },
          Object {
            "Carrier": "Logstash Airways",
            "avg(FlightDelayMin)": 45.36144578313253,
          },
          Object {
            "Carrier": "OpenSearch Dashboards Airlines",
            "avg(FlightDelayMin)": 63.1578947368421,
          },
          Object {
            "Carrier": "OpenSearch-Air",
            "avg(FlightDelayMin)": 46.81318681318681,
          },
        ],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "avg(FlightDelayMin)",
              "type": "double",
            },
            Object {
              "name": "Carrier",
              "type": "keyword",
            },
          ],
        },
        "size": 4,
        "status": 200,
      }
    }
  >
    <Plt
      config={Object {}}
      data={
        Array [
          Object {
            "marker": Object {
              "color": Array [
                "#3CA1C7",
                "#8C55A3",
                "#DB748A",
                "#F2BE4B",
              ],
            },
            "name": "avg(FlightDelayMin)",
            "type": "bar",
            "x": Array [
              "BeatsWest",
              "Logstash Airways",
              "OpenSearch Dashboards Airlines",
              "OpenSearch-Air",
            ],
            "y": Array [
              53.65384615384615,
              45.36144578313253,
              63.1578947368421,
              46.81318681318681,
            ],
          },
        ]
      }
      layout={
        Object {
          "colorway": Array [
            "#3CA1C7",
            "#8C55A3",
            "#DB748A",
            "#F2BE4B",
            "#68CCC2",
            "#2A7866",
            "#843769",
            "#374FB8",
            "#BD6F26",
            "#4C636F",
          ],
          "xaxis": Object {
            "automargin": true,
            "fixedrange": false,
            "showgrid": false,
          },
          "yaxis": Object {
            "automargin": true,
            "fixedrange": false,
            "showgrid": false,
          },
        }
      }
    >
      <PlotlyComponent
        config={
          Object {
            "displayModeBar": false,
          }
        }
        data={
          Array [
            Object {
              "marker": Object {
                "color": Array [
                  "#3CA1C7",
                  "#8C55A3",
                  "#DB748A",
                  "#F2BE4B",
                ],
              },
              "name": "avg(FlightDelayMin)",
              "type": "bar",
              "x": Array [
                "BeatsWest",
                "Logstash Airways",
                "OpenSearch Dashboards Airlines",
                "OpenSearch-Air",
              ],
              "y": Array [
                53.65384615384615,
                45.36144578313253,
                63.1578947368421,
                46.81318681318681,
              ],
            },
          ]
        }
        debug={false}
        layout={
          Object {
            "autosize": true,
            "barmode": "stack",
            "colorway": Array [
              "#3CA1C7",
              "#8C55A3",
              "#DB748A",
              "#F2BE4B",
              "#68CCC2",
              "#2A7866",
              "#843769",
              "#374FB8",
              "#BD6F26",
              "#4C636F",
            ],
            "hovermode": "closest",
            "legend": Object {
              "orientation": "h",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 30,
              "l": 30,
              "pad": 4,
              "r": 5,
              "t": 5,
            },
            "showlegend": false,
            "xaxis": Object {
              "automargin": true,
              "fixedrange": false,
              "showgrid": false,
            },
            "yaxis": Object {
              "automargin": true,
              "fixedrange": false,
              "showgrid": false,
            },
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
        useResizeHandler={true}
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </PlotlyComponent>
    </Plt>
  </Bar>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 2`] = `
<div>
  <Line
    layoutConfig={
      Object {
        "xaxis": Object {
          "fixedrange": true,
          "showgrid": false,
        },
        "yaxis": Object {
          "fixedrange": true,
          "showgrid": false,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "Carrier": Array [
            "BeatsWest",
            "Logstash Airways",
            "OpenSearch Dashboards Airlines",
            "OpenSearch-Air",
          ],
          "avg(FlightDelayMin)": Array [
            53.65384615384615,
            45.36144578313253,
            63.1578947368421,
            46.81318681318681,
          ],
        },
        "jsonData": Array [
          Object {
            "Carrier": "BeatsWest",
            "avg(FlightDelayMin)": 53.65384615384615,
          },
          Object {
            "Carrier": "Logstash Airways",
            "avg(FlightDelayMin)": 45.36144578313253,
          },
          Object {
            "Carrier": "OpenSearch Dashboards Airlines",
            "avg(FlightDelayMin)": 63.1578947368421,
          },
          Object {
            "Carrier": "OpenSearch-Air",
            "avg(FlightDelayMin)": 46.81318681318681,
          },
        ],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "avg(FlightDelayMin)",
              "type": "double",
            },
            Object {
              "name": "Carrier",
              "type": "keyword",
            },
          ],
        },
        "size": 4,
        "status": 200,
      }
    }
  >
    <Plt
      config={Object {}}
      data={
        Array [
          Object {
            "name": "avg(FlightDelayMin)",
            "type": "line",
            "x": Array [
              "BeatsWest",
              "Logstash Airways",
              "OpenSearch Dashboards Airlines",
              "OpenSearch-Air",
            ],
            "y": Array [
              53.65384615384615,
              45.36144578313253,
              63.1578947368421,
              46.81318681318681,
            ],
          },
        ]
      }
      layout={
        Object {
          "barmode": "line",
          "colorway": Array [
            "#3CA1C7",
            "#8C55A3",
            "#DB748A",
            "#F2BE4B",
            "#68CCC2",
            "#2A7866",
            "#843769",
            "#374FB8",
            "#BD6F26",
            "#4C636F",
          ],
          "paper_bgcolor": "rgba(0, 0, 0, 0)",
          "plot_bgcolor": "rgba(0, 0, 0, 0)",
          "xaxis": Object {
            "automargin": true,
            "fixedrange": true,
            "showgrid": false,
          },
          "yaxis": Object {
            "automargin": true,
            "fixedrange": true,
            "showgrid": false,
          },
        }
      }
    >
      <PlotlyComponent
        config={
          Object {
            "displayModeBar": false,
          }
        }
        data={
          Array [
            Object {
              "name": "avg(FlightDelayMin)",
              "type": "line",
              "x": Array [
                "BeatsWest",
                "Logstash Airways",
                "OpenSearch Dashboards Airlines",
                "OpenSearch-Air",
              ],
              "y": Array [
                53.65384615384615,
                45.36144578313253,
                63.1578947368421,
                46.81318681318681,
              ],
            },
          ]
        }
        debug={false}
        layout={
          Object {
            "autosize": true,
            "barmode": "line",
            "colorway": Array [
              "#3CA1C7",
              "#8C55A3",
              "#DB748A",
              "#F2BE4B",
              "#68CCC2",
              "#2A7866",
              "#843769",
              "#374FB8",
              "#BD6F26",
              "#4C636F",
            ],
            "hovermode": "closest",
            "legend": Object {
              "orientation": "h",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 30,
              "l": 30,
              "pad": 4,
              "r": 5,
              "t": 5,
            },
            "paper_bgcolor": "rgba(0, 0, 0, 0)",
            "plot_bgcolor": "rgba(0, 0, 0, 0)",
            "showlegend": false,
            "xaxis": Object {
              "automargin": true,
              "fixedrange": true,
              "showgrid": false,
            },
            "yaxis": Object {
              "automargin": true,
              "fixedrange": true,
              "showgrid": false,
            },
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
        useResizeHandler={true}
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </PlotlyComponent>
    </Plt>
  </Line>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 3`] = `
<div>
  <HorizontalBar
    layoutConfig={
      Object {
        "xaxis": Object {
          "fixedrange": false,
          "showgrid": false,
        },
        "yaxis": Object {
          "fixedrange": false,
          "showgrid": false,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "Carrier": Array [
            "BeatsWest",
            "Logstash Airways",
            "OpenSearch Dashboards Airlines",
            "OpenSearch-Air",
          ],
          "avg(FlightDelayMin)": Array [
            53.65384615384615,
            45.36144578313253,
            63.1578947368421,
            46.81318681318681,
          ],
        },
        "jsonData": Array [
          Object {
            "Carrier": "BeatsWest",
            "avg(FlightDelayMin)": 53.65384615384615,
          },
          Object {
            "Carrier": "Logstash Airways",
            "avg(FlightDelayMin)": 45.36144578313253,
          },
          Object {
            "Carrier": "OpenSearch Dashboards Airlines",
            "avg(FlightDelayMin)": 63.1578947368421,
          },
          Object {
            "Carrier": "OpenSearch-Air",
            "avg(FlightDelayMin)": 46.81318681318681,
          },
        ],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "avg(FlightDelayMin)",
              "type": "double",
            },
            Object {
              "name": "Carrier",
              "type": "keyword",
            },
          ],
        },
        "size": 4,
        "status": 200,
      }
    }
  >
    <Bar
      barConfig={
        Object {
          "orientation": "h",
        }
      }
      layoutConfig={
        Object {
          "xaxis": Object {
            "fixedrange": false,
            "showgrid": false,
          },
          "yaxis": Object {
            "automargin": true,
            "fixedrange": false,
            "showgrid": false,
          },
        }
      }
      visualizations={
        Object {
          "data": Object {
            "Carrier": Array [
              "BeatsWest",
              "Logstash Airways",
              "OpenSearch Dashboards Airlines",
              "OpenSearch-Air",
            ],
            "avg(FlightDelayMin)": Array [
              53.65384615384615,
              45.36144578313253,
              63.1578947368421,
              46.81318681318681,
            ],
          },
          "jsonData": Array [
            Object {
              "Carrier": "BeatsWest",
              "avg(FlightDelayMin)": 53.65384615384615,
            },
            Object {
              "Carrier": "Logstash Airways",
              "avg(FlightDelayMin)": 45.36144578313253,
            },
            Object {
              "Carrier": "OpenSearch Dashboards Airlines",
              "avg(FlightDelayMin)": 63.1578947368421,
            },
            Object {
              "Carrier": "OpenSearch-Air",
              "avg(FlightDelayMin)": 46.81318681318681,
            },
          ],
          "metadata": Object {
            "fields": Array [
              Object {
                "name": "avg(FlightDelayMin)",
                "type": "double",
              },
              Object {
                "name": "Carrier",
                "type": "keyword",
              },
            ],
          },
          "size": 4,
          "status": 200,
        }
      }
    >
      <Plt
        config={
          Object {
            "orientation": "h",
          }
        }
        data={
          Array [
            Object {
              "marker": Object {
                "color": Array [
                  "#3CA1C7",
                  "#8C55A3",
                  "#DB748A",
                  "#F2BE4B",
                ],
              },
              "name": "avg(FlightDelayMin)",
              "orientation": "h",
              "type": "bar",
              "x": Array [
                53.65384615384615,
                45.36144578313253,
                63.1578947368421,
                46.81318681318681,
              ],
              "y": Array [
                "BeatsWest",
                "Logstash Airways",
                "OpenSearch Dashboards Airlines",
                "OpenSearch-Air",
              ],
            },
          ]
        }
        layout={
          Object {
            "colorway": Array [
              "#3CA1C7",
              "#8C55A3",
              "#DB748A",
              "#F2BE4B",
              "#68CCC2",
              "#2A7866",
              "#843769",
              "#374FB8",
              "#BD6F26",
              "#4C636F",
            ],
            "xaxis": Object {
              "automargin": true,
              "fixedrange": false,
              "showgrid": false,
            },
            "yaxis": Object {
              "automargin": true,
              "fixedrange": false,
              "showgrid": false,
            },
          }
        }
      >
        <PlotlyComponent
          config={
            Object {
              "displayModeBar": false,
              "orientation": "h",
            }
          }
          data={
            Array [
              Object {
                "marker": Object {
                  "color": Array [
                    "#3CA1C7",
                    "#8C55A3",
                    "#DB748A",
                    "#F2BE4B",
                  ],
                },
                "name": "avg(FlightDelayMin)",
                "orientation": "h",
                "type": "bar",
                "x": Array [
                  53.65384615384615,
                  45.36144578313253,
                  63.1578947368421,
                  46.81318681318681,
                ],
                "y": Array [
                  "BeatsWest",
                  "Logstash Airways",
                  "OpenSearch Dashboards Airlines",
                  "OpenSearch-Air",
                ],
              },
            ]
          }
          debug={false}
          layout={
            Object {
              "autosize": true,
              "barmode": "stack",
              "colorway": Array [
                "#3CA1C7",
                "#8C55A3",
                "#DB748A",
                "#F2BE4B",
                "#68CCC2",
                "#2A7866",
                "#843769",
                "#374FB8",
                "#BD6F26",
                "#4C636F",
              ],
              "hovermode": "closest",
              "legend": Object {
                "orientation": "h",
                "traceorder": "normal",
              },
              "margin": Object {
                "b": 30,
                "l": 30,
                "pad": 4,
                "r": 5,
                "t": 5,
              },
              "showlegend": false,
              "xaxis": Object {
                "automargin": true,
                "fixedrange": false,
                "showgrid": false,
              },
              "yaxis": Object {
                "automargin": true,
                "fixedrange": false,
                "showgrid": false,
              },
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
          useResizeHandler={true}
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </PlotlyComponent>
      </Plt>
    </Bar>
  </HorizontalBar>
</div>
`;

exports[`Utils helper functions renders displayVisualization function 4`] = `
<div>
  <HorizontalBar
    layoutConfig={
      Object {
        "xaxis": Object {
          "fixedrange": true,
          "showgrid": false,
        },
        "yaxis": Object {
          "fixedrange": true,
          "showgrid": false,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "count('ip')": Array [],
          "span(timestamp,1h)": Array [],
        },
        "jsonData": Array [],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "count('ip')",
              "type": "integer",
            },
            Object {
              "name": "span(timestamp,1h)",
              "type": "timestamp",
            },
          ],
        },
        "size": 0,
        "status": 200,
      }
    }
  >
    <Bar
      barConfig={
        Object {
          "orientation": "h",
        }
      }
      layoutConfig={
        Object {
          "xaxis": Object {
            "fixedrange": true,
            "showgrid": false,
          },
          "yaxis": Object {
            "automargin": true,
            "fixedrange": true,
            "showgrid": false,
          },
        }
      }
      visualizations={
        Object {
          "data": Object {
            "count('ip')": Array [],
            "span(timestamp,1h)": Array [],
          },
          "jsonData": Array [],
          "metadata": Object {
            "fields": Array [
              Object {
                "name": "count('ip')",
                "type": "integer",
              },
              Object {
                "name": "span(timestamp,1h)",
                "type": "timestamp",
              },
            ],
          },
          "size": 0,
          "status": 200,
        }
      }
    >
      <Plt
        config={
          Object {
            "orientation": "h",
          }
        }
        data={
          Array [
            Object {
              "marker": Object {
                "color": Array [],
              },
              "name": "count('ip')",
              "orientation": "h",
              "type": "bar",
              "x": Array [],
              "y": Array [],
            },
          ]
        }
        layout={
          Object {
            "colorway": Array [
              "#3CA1C7",
              "#8C55A3",
              "#DB748A",
              "#F2BE4B",
              "#68CCC2",
              "#2A7866",
              "#843769",
              "#374FB8",
              "#BD6F26",
              "#4C636F",
            ],
            "xaxis": Object {
              "automargin": true,
              "fixedrange": true,
              "showgrid": false,
            },
            "yaxis": Object {
              "automargin": true,
              "fixedrange": true,
              "showgrid": false,
            },
          }
        }
      >
        <PlotlyComponent
          config={
            Object {
              "displayModeBar": false,
              "orientation": "h",
            }
          }
          data={
            Array [
              Object {
                "marker": Object {
                  "color": Array [],
                },
                "name": "count('ip')",
                "orientation": "h",
                "type": "bar",
                "x": Array [],
                "y": Array [],
              },
            ]
          }
          debug={false}
          layout={
            Object {
              "autosize": true,
              "barmode": "stack",
              "colorway": Array [
                "#3CA1C7",
                "#8C55A3",
                "#DB748A",
                "#F2BE4B",
                "#68CCC2",
                "#2A7866",
                "#843769",
                "#374FB8",
                "#BD6F26",
                "#4C636F",
              ],
              "hovermode": "closest",
              "legend": Object {
                "orientation": "h",
                "traceorder": "normal",
              },
              "margin": Object {
                "b": 30,
                "l": 30,
                "pad": 4,
                "r": 5,
                "t": 5,
              },
              "showlegend": false,
              "xaxis": Object {
                "automargin": true,
                "fixedrange": true,
                "showgrid": false,
              },
              "yaxis": Object {
                "automargin": true,
                "fixedrange": true,
                "showgrid": false,
              },
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
          useResizeHandler={true}
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </PlotlyComponent>
      </Plt>
    </Bar>
  </HorizontalBar>
</div>
`;
